--- a/style.css
+++ b/style.css
@@ -1,23 +1,45 @@
+body{
+    max-width: 100vw;
+    overflow-x: scroll;
+}
 
-.wrapper{
-    margin: 10% auto;
-    width: 50%;
+.wrapper{    
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    max-width: 80vw;
+    margin: 5vh auto;
+}
+.containerForm{
+    padding: 30px;
+    background-color: rgb(255, 187, 179);
+    color: darkslategrey;
+    width: 50vw;
+    margin: 0 auto;
 }
 
 .containerLocation{
     padding: 30px;
     background-color: rgb(255, 187, 179);
     color: darkslategrey;
+    width: auto;
+    margin: 0 auto;
 }
 .containerPhotos{
     margin-top: 2vh;
-    padding: 30px;
     background-color: rgb(179, 226, 255);
     color: darkslategrey;
+    width: 100vw;
     max-width: 100vw;
     height: auto;
-    display:table;
-    overflow:scroll;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    vertical-align:middle;
 }
 
 .hidden{
@@ -35,8 +57,18 @@ text-transform: capitalize;
 }
 
 img{
-    margin: 20px;
-    width: 100px;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
     height: auto;
-    border: 1px solid black;
+    border: 3px solid white;
+    border-radius: 15px;
+    left: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+	max-width: 100vw;
+	position: relative;
+	right: 50%;
+	width: 100vw;
 }
+
