--- a/style.css
+++ b/style.css
@@ -28,10 +28,62 @@ body{
     width: auto;
     margin: 0 auto;
 }
+
 .containerPhotos{
+    padding: 30px;
+    width: 90vw;
+    margin: 0 auto;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    text-align: center;
+}
+
+.containerPhotos h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: xx-large;
+    font-weight: 600;
+    color: white;
     margin-top: 2vh;
-    background-color: rgb(179, 226, 255);
-    color: darkslategrey;
+    margin-bottom: 2vh;
+    background-color: darkgreen;
+    width: 100vw;
+    padding: 30px;
+}
+
+.column img {
+    width: 25%;
+    height: auto;
+    max-width: 500px;
+    max-height: 600px;
+    border: 3px white;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin: 2vh 2vw;
+    vertical-align: middle;
+  }
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 20px;
+}
+
+.hidden{
+    display: none;
+}
+
+.capitilise{
+text-transform: capitalize;
+}
+
+
+
+/* from array slicing - unused atm, cannot slice array easily */
+/* .containerPhotos1{
     width: 100vw;
     max-width: 100vw;
     height: auto;
@@ -41,34 +93,23 @@ body{
     align-items: center;
     vertical-align:middle;
 }
-
-.hidden{
-    display: none;
-}
-
-.capMonth{
-text-transform: capitalize;
-}
-
-#testBtn{
-    margin-left: 2vh;
-    background-color: darksalmon;
-    color: white;
-}
-
-img{
-    display: flex;
-    flex-direction: column;
+.containerPhotos2{
     width: 100vw;
+    max-width: 100vw;
     height: auto;
-    border: 3px solid white;
-    border-radius: 15px;
-    left: 50%;
-	margin-left: -50vw;
-	margin-right: -50vw;
-	max-width: 100vw;
-	position: relative;
-	right: 50%;
-	width: 100vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    vertical-align:middle;
 }
-
+.containerPhotos3{
+    width: 100vw;
+    max-width: 100vw;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    vertical-align:middle;
+} */
