--- a/style.css
+++ b/style.css
@@ -2,13 +2,20 @@ body{
     max-width: 100vw;
     overflow-x: scroll;
 }
+.header{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 90vw;
+    margin: 2.5vh auto;
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .wrapper{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
     width: 90vw;
-    margin: 5vh auto;
+    margin: 0 auto;
 }
+
 .containerForm{
     font-size: large;
     font-weight: 500;
@@ -52,7 +59,7 @@ body{
 .infoWrapper{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: fit-content;
-    margin: 5vh auto;
+    margin: 0 auto;
     align-self: center;
     align-items: center;
     align-content: center;
@@ -64,7 +71,7 @@ body{
 }
 .containerLocation{
     padding: 4vh 2vw;
-    background-color: rgb(122, 255, 153);
+    background-color: rgb(255, 255, 255);
     color: black;
     width: 22vw;
     margin: 1vh 1vw;
@@ -75,7 +82,7 @@ body{
 
 .containerWeather{
     padding: 4vh 2vw;
-    background-color: rgb(117, 186, 255);
+    background-color: rgb(255, 255, 255);
     color: black;
     width: 22vw;
     margin: 1vh 1vw;
@@ -86,7 +93,7 @@ body{
 
 .containerInfo{
     padding: 4vh 2vw;
-    background-color: rgb(255, 160, 76);
+    background-color: rgb(255, 255, 255);
     color: black;
     width: 22vw;
     margin: 1vh 1vw;
@@ -107,14 +114,134 @@ h1{
 }
 h2{
     font-size: x-large;
- }
- h3{
+}
+
+h3{
     font-size: large;
+}
+
+h4{
+    font-size: medium;
+}
+
+#header{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 40vh;
+    width: 80vw;
+    margin: 0 auto;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    text-align: center;
+    overflow: hidden;
+    vertical-align: middle;
+    line-height: 300%;
+}
+
+.topSpace{
+    margin-top: 5vh;
+}
+
+.containerHeader{
+    margin:0 auto;
+    margin-top: 10vh;    
+}
+
+ #loading{
+    height: 40vh;
+    width: 80vw;
+    margin: 0 auto;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    text-align: center;
+    overflow: hidden;
  }
 
- h4{
-    font-size: medium;
+ .logoBG{
+    left: 35vw;
+    top: 10vh;
+    position: absolute;
+    margin: 0 auto;
+    height: auto;
+    width: 27vw;
+    z-index: 1;
  }
+ 
+ .loadingLogo{
+    position: relative;
+    right: -5.8vw;
+    height: auto;
+    width: 10vw;
+	animation: loadingAnimation 5s;
+    animation-fill-mode: forwards;
+    animation-delay: .5s;
+    z-index: 2;
+    top:40vh;
+}
+
+@keyframes loadingAnimation {
+    0% {
+        top:40vh;
+      }
+    
+    80% {
+        top:10vh;
+      }
+    
+    100% {
+        top:10vh;
+      }
+}
+
+.loadingText{
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    background-color: pink;
+}
+
+.destUnkText{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 700;
+        position: relative;
+        font-size: 80px;
+        color: #4d4d4d;
+        -webkit-text-stroke: 2px #666666;
+}
+
+
+.destUnkText::before {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 700;
+    position: absolute;
+    content: attr(data-text);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #05a9f3;
+    -webkit-text-stroke: 0px #05a9f3;
+    overflow: hidden;
+    animation: loading 6s ease-out forwards;
+}
+
+@keyframes loading {
+    0% { width: 0; }
+    20% { width: 45%; }
+    80% { width: 75%; }
+    90% { width: 85%; }
+    100% { width: 100%; }
+}
 
 
 .containerPhotos{
@@ -141,6 +268,7 @@ h2{
     padding: 30px;
 }
 
+
 .column img {
     max-width: 25%;
     width: 20vw;
@@ -154,8 +282,7 @@ h2{
     transition: .3s all ease-in-out;
 }
 
-
-img:hover{
+.column img:hover{
     height: auto;
     transform: scale(2);
     object-fit:fill;  
@@ -177,8 +304,6 @@ img:hover{
         max-width: 80%;
         width: 80%;
     }
-
-
 }
 
 .row{
@@ -188,14 +313,51 @@ img:hover{
 }
 
 .hidden{
-    display: none;
+    display:none;
 }
 
 .capitilise{
 text-transform: capitalize;
 }
 
+.winter{
+    background: linear-gradient(-45deg, #52ebee, #5becff, #50b3ff, #89d1f7);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
 
+.summer{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #d56123, #ae1313);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+.spring{
+    background: linear-gradient(-45deg, #53731d, #b2be45, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+.autumn{
+    background: linear-gradient(-45deg, #ee7752, #892064, #c65e25, #91396d);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}}
 
 /* from array slicing - unused atm, cannot slice array easily */
 /* .containerPhotos1{
