--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body{
+    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
     max-width: 100vw;
     overflow-x: scroll;
+  
 }
+
 .header{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 90vw;
     margin: 2.5vh auto;
     display: flex;
@@ -11,53 +15,41 @@ body{
 }
 
 .wrapper{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 90vw;
     margin: 0 auto;
+}
+
+.centerText{
+    text-align: center;
 }
 
 .containerForm{
     font-size: large;
     font-weight: 500;
-    background-color: rgb(220, 220, 220);
-    color: darkslategrey;
-    width: 20%;
+    background-color: white;
+    color: rgb(60, 60, 60);
+    width: 18vw;
     margin: 0 auto;
     border-radius: 15px;
     padding: 10px;
     line-height: 200%;
-    align-self: center;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
     text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 6px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.userInput{
-    align-self: center;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    text-align: center;
-    width: fit-content;
-}
 .formText{
     text-align: center;
     font-size: small;
     font-weight: 600;
 }
 #resetBtn{
-    padding: 20px 10px;
-    background-color: green;
+    margin: 1vh 2vw;
+    padding: 10px 20px;
+    background-color: #173A2C;
     color: white;
     font-size: x-large;
 }
 .infoWrapper{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: fit-content;
     margin: 0 auto;
     align-self: center;
@@ -73,33 +65,26 @@ body{
     padding: 4vh 2vw;
     background-color: rgb(255, 255, 255);
     color: black;
-    width: 22vw;
+    width: 16vw;
+    height: 16vw;
     margin: 1vh 1vw;
     text-align: center;
     line-height: 200%;
     border-radius: 15px;
+    overflow: hidden;
 }
 
 .containerWeather{
     padding: 4vh 2vw;
     background-color: rgb(255, 255, 255);
     color: black;
-    width: 22vw;
+    width: 16vw;
+    height: 16vw;
     margin: 1vh 1vw;
     text-align: center;
     line-height: 200%;
     border-radius: 15px;
-}
-
-.containerInfo{
-    padding: 4vh 2vw;
-    background-color: rgb(255, 255, 255);
-    color: black;
-    width: 22vw;
-    margin: 1vh 1vw;
-    text-align: center;
-    line-height: 200%;
-    border-radius: 15px;
+    overflow: hidden;
 }
 
 .title{
@@ -109,23 +94,31 @@ body{
 }
 
 h1{
-   font-size: xx-large;
+   font-size: 3vw;
+   font-weight: 600;
 
 }
 h2{
-    font-size: x-large;
+    font-size: 1vw;
+    font-weight: 400;
 }
 
 h3{
-    font-size: large;
+    font-size: 1vw;;
+    font-weight: 300;
 }
 
 h4{
-    font-size: medium;
+    font-size: .75vw;
+    font-weight: 200;
+}
+
+p{
+    font-size: .75vw;
+    font-weight: 100;
 }
 
 #header{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: 40vh;
     width: 80vw;
     margin: 0 auto;
@@ -142,7 +135,8 @@ h4{
 }
 
 .topSpace{
-    margin-top: 5vh;
+    margin-top: 3vh;
+    font-weight: 600;
 }
 
 .containerHeader{
@@ -150,16 +144,16 @@ h4{
     margin-top: 10vh;    
 }
 
- #loading{
+#loadingContent{
+    height: 100vh;
+    width: 100vw;
+    margin-top: 10vh;
+}
+
+ #loadingImage{
     height: 40vh;
     width: 80vw;
     margin: 0 auto;
-    align-self: center;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
-    justify-self: center;
     text-align: center;
     overflow: hidden;
  }
@@ -201,45 +195,48 @@ h4{
 }
 
 .loadingText{
-    width: 100%;
     height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    background-color: pink;
+}
+#loadTextWrapper{
+    color: #3E3E3E;
 }
 
 .destUnkText{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: 700;
         position: relative;
-        font-size: 80px;
-        color: #4d4d4d;
-        -webkit-text-stroke: 2px #666666;
+        color: #ffffff;
+        font-size: 5vw;
 }
 
 
 .destUnkText::before {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 700;
     position: absolute;
     content: attr(data-text);
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    color: #05a9f3;
-    -webkit-text-stroke: 0px #05a9f3;
+    /* For some reason the height had to be 120% or their was white line in the bottom of the g in landing */
+    height: 120%;
+    color: #173A2C;
     overflow: hidden;
-    animation: loading 6s ease-out forwards;
+    animation: loading 7s ease-out forwards;
+    font-size: 5vw;
 }
-
+/* Messing with loading time to make it look like its working really hard... */
 @keyframes loading {
     0% { width: 0; }
-    20% { width: 45%; }
+    20% { width: 20%; }
+    60% { width: 50%; }
+    75% { width: 55%; }
     80% { width: 75%; }
-    90% { width: 85%; }
+    95% { width: 90%; }
+    95% { width: 90%; }
+    95% { width: 90%; }
     100% { width: 100%; }
 }
 
@@ -258,9 +255,8 @@ h4{
 }
 
 .containerPhotos h1{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: xx-large;
-    font-weight: 600;
+    font-weight: 500;
     color: white;
     margin-top: 2vh;
     margin-bottom: 2vh;
@@ -275,7 +271,6 @@ h4{
     height: 40vh;
     border: 3px white;
     border-radius: 15px;
-    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
     padding: 4vh 2vw;
     vertical-align: middle;
     object-fit: cover;  
@@ -292,6 +287,7 @@ h4{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+/* Not sure if this is functioning correctly, neeeds more testing */
 @media only screen and (max-width: 600px) {
     
     .column{
@@ -321,30 +317,30 @@ text-transform: capitalize;
 }
 
 .winter{
-    background: linear-gradient(-45deg, #52ebee, #5becff, #50b3ff, #89d1f7);
+    background-image: radial-gradient( circle 1224px at 10.6% 8.8%,  rgba(255,255,255,1) 0%, rgba(153,202,251,1) 100.2% );
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 7s ease infinite;
 	height: 100vh;
 }
 
 .summer{
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #d56123, #ae1313);
+    background-image: linear-gradient( 270.2deg,  rgba(255,230,112,1) 10.4%, rgb(100, 255, 105) 43.8%, rgba(0,93,219,1) 105.8% );
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 7s ease infinite;
 	height: 100vh;
 }
 
 .spring{
-    background: linear-gradient(-45deg, #53731d, #b2be45, #23a6d5, #23d5ab);
+    background: linear-gradient(to right, #43c6ac, #f8ffae);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 7s ease infinite;
 	height: 100vh;
 }
 
 .autumn{
-    background: linear-gradient(-45deg, #ee7752, #892064, #c65e25, #91396d);
+    background: linear-gradient(to right, #f3904f, #3b4371);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 7s ease infinite;
 	height: 100vh;
 }
 
@@ -357,36 +353,5 @@ text-transform: capitalize;
 	}
 	100% {
 		background-position: 0% 50%;
-	}}
-
-/* from array slicing - unused atm, cannot slice array easily */
-/* .containerPhotos1{
-    width: 100vw;
-    max-width: 100vw;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    vertical-align:middle;
+    }
 }
-.containerPhotos2{
-    width: 100vw;
-    max-width: 100vw;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    vertical-align:middle;
-}
-.containerPhotos3{
-    width: 100vw;
-    max-width: 100vw;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    vertical-align:middle;
-} */
