--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
-body{
+body {
     background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
-	background-size: 400% 400%;
-	animation: gradient 10s ease infinite;
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
     max-width: 100vw;
     overflow-x: scroll;
+    font-family: "Poppins", sans-serif;
+  }
   
-}
-
-.header{
+  .header {
     width: 90vw;
     margin: 2.5vh auto;
     display: flex;
     flex-wrap: wrap;
-}
-
-.wrapper{
+  }
+  
+  .wrapper {
     width: 90vw;
     margin: 0 auto;
-}
-
-.centerText{
+  }
+  
+  .centerText {
     text-align: center;
-}
-
-.containerForm{
+  }
+  
+  .containerForm {
     font-size: large;
     font-weight: 500;
     background-color: white;
@@ -34,22 +34,24 @@ body{
     padding: 10px;
     line-height: 200%;
     text-align: center;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 6px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.formText{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 6px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  
+  .formText {
     text-align: center;
     font-size: small;
     font-weight: 600;
-}
-#resetBtn{
+  }
+  #resetBtn {
     margin: 1vh 2vw;
     padding: 10px 20px;
-    background-color: #173A2C;
+    background-color: #173a2c;
     color: white;
     font-size: x-large;
-}
-.infoWrapper{
+  }
+  .infoWrapper {
     width: fit-content;
     margin: 0 auto;
     align-self: center;
@@ -60,8 +62,8 @@ body{
     justify-self: center;
     text-align: center;
     width: fit-content;
-}
-.containerLocation{
+  }
+  .containerLocation {
     padding: 4vh 2vw;
     background-color: rgb(255, 255, 255);
     color: black;
@@ -72,9 +74,9 @@ body{
     line-height: 200%;
     border-radius: 15px;
     overflow: hidden;
-}
-
-.containerWeather{
+  }
+  
+  .containerWeather {
     padding: 4vh 2vw;
     background-color: rgb(255, 255, 255);
     color: black;
@@ -85,40 +87,39 @@ body{
     line-height: 200%;
     border-radius: 15px;
     overflow: hidden;
-}
-
-.title{
+  }
+  
+  .title {
     font-size: large;
     font-weight: 600;
     margin-bottom: 1vh;
-}
-
-h1{
-   font-size: 3vw;
-   font-weight: 600;
-
-}
-h2{
+  }
+  
+  h1 {
+    font-size: 3vw;
+    font-weight: 600;
+  }
+  h2 {
     font-size: 1vw;
     font-weight: 400;
-}
-
-h3{
-    font-size: 1vw;;
+  }
+  
+  h3 {
+    font-size: 1vw;
     font-weight: 300;
-}
-
-h4{
-    font-size: .75vw;
+  }
+  
+  h4 {
+    font-size: 0.75vw;
     font-weight: 200;
-}
-
-p{
-    font-size: .75vw;
+  }
+  
+  p {
+    font-size: 0.75vw;
     font-weight: 100;
-}
-
-#header{
+  }
+  
+  #header {
     height: 40vh;
     width: 80vw;
     margin: 0 auto;
@@ -132,88 +133,90 @@ p{
     overflow: hidden;
     vertical-align: middle;
     line-height: 300%;
-}
-
-.topSpace{
+  }
+  
+  .topSpace {
     margin-top: 3vh;
     font-weight: 600;
-}
-
-.containerHeader{
-    margin:0 auto;
-    margin-top: 10vh;    
-}
-
-#loadingContent{
+  }
+  
+  .containerHeader {
+    margin: 0 auto;
+    margin-top: 10vh;
+  }
+  
+  #loadingContent {
     height: 100vh;
     width: 100vw;
     margin-top: 10vh;
-}
-
- #loadingImage{
+  }
+  
+  #loadingImage {
     height: 40vh;
     width: 80vw;
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
- }
-
- .logoBG{
+  }
+  
+  .logoBG {
     left: 35vw;
-    top: 10vh;
+    top: 15vh;
     position: absolute;
     margin: 0 auto;
     height: auto;
     width: 27vw;
     z-index: 1;
- }
- 
- .loadingLogo{
+  }
+  
+  .loadingLogo {
     position: relative;
-    right: -5.8vw;
+    right: -5vw;
     height: auto;
     width: 10vw;
-	animation: loadingAnimation 5s;
-    animation-fill-mode: forwards;
-    animation-delay: .5s;
+    animation: loadingAnimation linear 5.5s;
+    animation-delay: 0.2s;
     z-index: 2;
-    top:40vh;
-}
-
-@keyframes loadingAnimation {
+    top: 35vh;
+  }
+  
+  @keyframes loadingAnimation {
     0% {
-        top:40vh;
-      }
-    
+      top: 35vh;
+    }
+    50% {
+      top: 15vh;
+    }
+    70% {
+      top: 1vh;
+    }
     80% {
-        top:10vh;
-      }
-    
+      top: 0.3vh;
+    }
     100% {
-        top:10vh;
-      }
-}
-
-.loadingText{
+      top: 0.3vh;
+    }
+  }
+  
+  .loadingText {
     height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-}
-#loadTextWrapper{
-    color: #3E3E3E;
-}
-
-.destUnkText{
-        font-weight: 700;
-        position: relative;
-        color: #ffffff;
-        font-size: 5vw;
-}
-
-
-.destUnkText::before {
+  }
+  #loadTextWrapper {
+    color: #3e3e3e;
+  }
+  
+  .destUnkText {
+    font-weight: 700;
+    position: relative;
+    color: #ffffff;
+    font-size: 5vw;
+  }
+  
+  .destUnkText::before {
     font-weight: 700;
     position: absolute;
     content: attr(data-text);
@@ -222,26 +225,43 @@ p{
     width: 100%;
     /* For some reason the height had to be 120% or their was white line in the bottom of the g in landing */
     height: 120%;
-    color: #173A2C;
+    color: #173a2c;
     overflow: hidden;
-    animation: loading 7s ease-out forwards;
+    animation: loading 5s ease-out forwards;
     font-size: 5vw;
-}
-/* Messing with loading time to make it look like its working really hard... */
-@keyframes loading {
-    0% { width: 0; }
-    20% { width: 20%; }
-    60% { width: 50%; }
-    75% { width: 55%; }
-    80% { width: 75%; }
-    95% { width: 90%; }
-    95% { width: 90%; }
-    95% { width: 90%; }
-    100% { width: 100%; }
-}
-
-
-.containerPhotos{
+  }
+  /* Messing with loading time to make it look like its working really hard... */
+  @keyframes loading {
+    0% {
+      width: 0;
+    }
+    20% {
+      width: 20%;
+    }
+    60% {
+      width: 50%;
+    }
+    75% {
+      width: 55%;
+    }
+    80% {
+      width: 80%;
+    }
+    95% {
+      width: 90%;
+    }
+    96% {
+      width: 96%;
+    }
+    97% {
+      width: 97%;
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  
+  .containerPhotos {
     padding: 30px;
     width: 90vw;
     margin: 0 auto;
@@ -252,9 +272,9 @@ p{
     justify-items: center;
     justify-self: center;
     text-align: center;
-}
-
-.containerPhotos h1{
+  }
+  
+  .containerPhotos h1 {
     font-size: xx-large;
     font-weight: 500;
     color: white;
@@ -262,10 +282,9 @@ p{
     margin-bottom: 2vh;
     background-color: darkgreen;
     padding: 30px;
-}
-
-
-.column img {
+  }
+  
+  .column img {
     max-width: 25%;
     width: 20vw;
     height: 40vh;
@@ -273,85 +292,96 @@ p{
     border-radius: 15px;
     padding: 4vh 2vw;
     vertical-align: middle;
-    object-fit: cover;  
-    transition: .3s all ease-in-out;
-}
-
-.column img:hover{
+    object-fit: cover;
+    transition: 0.3s all ease-in-out;
+  }
+  
+  .column img:hover {
     height: auto;
     transform: scale(2);
-    object-fit:fill;  
+    object-fit: fill;
     background-color: white;
     border: 20px white;
     border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-/* Not sure if this is functioning correctly, neeeds more testing */
-@media only screen and (max-width: 600px) {
-    
-    .column{
-        width:auto
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  
+  /* Not sure if this is functioning correctly, neeeds more testing */
+  @media only screen and (max-width: 600px) {
+    .column {
+      width: auto;
     }
-
-    img{
-        width: auto;
-        height: auto;
-        max-width: 80%;
-        width: 80%;
+  
+    img {
+      width: auto;
+      height: auto;
+      max-width: 80%;
+      width: 80%;
     }
-}
-
-.row{
+  }
+  
+  .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 20px;
-}
-
-.hidden{
-    display:none;
-}
-
-.capitilise{
-text-transform: capitalize;
-}
-
-.winter{
-    background-image: radial-gradient( circle 1224px at 10.6% 8.8%,  rgba(255,255,255,1) 0%, rgba(153,202,251,1) 100.2% );
-	background-size: 400% 400%;
-	animation: gradient 7s ease infinite;
-	height: 100vh;
-}
-
-.summer{
-    background-image: linear-gradient( 270.2deg,  rgba(255,230,112,1) 10.4%, rgb(100, 255, 105) 43.8%, rgba(0,93,219,1) 105.8% );
-	background-size: 400% 400%;
-	animation: gradient 7s ease infinite;
-	height: 100vh;
-}
-
-.spring{
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  .capitilise {
+    text-transform: capitalize;
+  }
+  
+  .winter {
+    background-image: radial-gradient(
+      circle 1224px at 10.6% 8.8%,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(153, 202, 251, 1) 100.2%
+    );
+    background-size: 400% 400%;
+    animation: gradient 7s ease infinite;
+    height: 100vh;
+  }
+  
+  .summer {
+    background-image: linear-gradient(
+      270.2deg,
+      rgba(255, 230, 112, 1) 10.4%,
+      rgb(100, 255, 105) 43.8%,
+      rgba(0, 93, 219, 1) 105.8%
+    );
+    background-size: 400% 400%;
+    animation: gradient 7s ease infinite;
+    height: 100vh;
+  }
+  
+  .spring {
     background: linear-gradient(to right, #43c6ac, #f8ffae);
-	background-size: 400% 400%;
-	animation: gradient 7s ease infinite;
-	height: 100vh;
-}
-
-.autumn{
+    background-size: 400% 400%;
+    animation: gradient 7s ease infinite;
+    height: 100vh;
+  }
+  
+  .autumn {
     background: linear-gradient(to right, #f3904f, #3b4371);
-	background-size: 400% 400%;
-	animation: gradient 7s ease infinite;
-	height: 100vh;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
+    background-size: 400% 400%;
+    animation: gradient 7s ease infinite;
+    height: 100vh;
+  }
+  
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
     }
-}
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
