--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ body {
     justify-items: center;
     justify-self: center;
     text-align: center;
-    width: fit-content;
   }
   .containerLocation {
     padding: 4vh 2vw;
@@ -261,9 +260,47 @@ body {
     }
   }
 
-  #randomBtn{
-    margin-right: 2vw;
+  .containerRandom{
+    margin: 5vh auto;
+    width: 30vw;
+    text-align: center;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    text-align: center;
+
   }
+  .randomButton{
+        box-shadow: 0px 10px 14px -7px #276873;
+        background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+        background-color:#599bb3;
+        border-radius:8px;
+        display:inline-block;
+        cursor:pointer;
+        color:#ffffff;
+        font-family:Arial;
+        font-size:20px;
+        font-weight:bold;
+        padding:13px 32px;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #3d768a;
+    }
+
+    .randomButton:hover {
+        background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+        background-color:#408c99;
+    }
+
+    .randomButton:active {
+        position:relative;
+        top:1px;
+    }
+    
+ 
+
   
   .containerPhotos {
     padding: 30px;
