--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   }
   
   .containerForm {
-    font-size: large;
+    font-size: 1.5rem;
     font-weight: 500;
     background-color: white;
     color: rgb(60, 60, 60);
@@ -51,6 +51,9 @@ body {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 6px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  .containerform p{
+    font-size: 1.5rem;
   }
   
 
@@ -342,6 +345,22 @@ body {
 
   /* On screens that are 992px or less, set the background color to blue */
 @media screen and (max-width: 1040px) {
+
+    .containerForm {
+        font-size: 2rem;
+        width: fit-content;
+        padding: 1rem;
+      }
+
+      .containerForm input{
+        font-size: 2rem;
+        font-weight: 200;
+      }
+
+      .containerform p{
+        font-size: 2rem;
+      }
+
       .column img {
         max-width: 100%;
         width: 80vw;
