--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ body {
   }
 
   #header {
-    margin-top: 15vh;
-    height: 25vh;
+    margin: 7.5vh auto;
+    min-height: 30vh;
     width: 100vw;
   }
 
   .containerHeader {
+    width: 60vw;
     text-align: center;
     margin: 0 auto;
     line-height: 300%;
@@ -26,6 +27,7 @@ body {
     height: auto;
     margin: 0 3vw;
     position: absolute;
+    filter: brightness(0) invert(1);
   }
 
   .wrapper {
@@ -40,20 +42,28 @@ body {
   .containerForm {
     font-size: 1.5rem;
     font-weight: 500;
-    background-color: white;
+    background-color: rgba(255, 245, 228, 0.655);
     color: rgb(60, 60, 60);
     width: 30vw;
     margin: 0 auto;
     border-radius: 15px;
     padding: 10px;
-    line-height: 200%;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 6px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
-  .containerform p{
+  .containerForm p{
     font-size: 1.5rem;
+    font-weight: 300;
+  }
+  
+  .containerForm input::placeholder{
+    color: #cdcdcd;
+  }
+
+  .formText{
+    margin-bottom: 2vh;
   }
   
 
@@ -70,15 +80,15 @@ body {
   }
 
   .containerLocation {
-    display: inline-block;
     max-width:100%;
-    width: fit-content;
+    width: 38vw;
     height: auto;
     padding: 1vh 2vw;
     background-color: rgb(255, 255, 255);
     color: black;
     margin: 1vh 1vw;
     text-align: center;
+    word-break: break-all;
     line-height: 200%;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
@@ -87,9 +97,9 @@ body {
   }
   
   .containerWeather {
-    display: inline-block;
     max-width:100%;
-    width: fit-content;
+    width: 38vw;
+    word-break: break-all;
     height: auto;
     padding: 1vh 2vw;
     background-color: rgb(255, 255, 255);
@@ -105,11 +115,10 @@ body {
  
   .photoHeading h2{
     font-family: "Poppins", sans-serif;
-    width: 100vw;
-    font-size: 3rem;
-    font-weight: 500;
-    color: white;
-    margin: 3vh auto;
+    width: 80vw;
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin: 2vh auto;
     color: white;
     vertical-align: middle;
   }
@@ -159,76 +168,56 @@ body {
   #loadingImage {
     height: 40vh;
     width: 80vw;
-    margin: 0 auto;
+    margin: 5vh auto;
     text-align: center;
     overflow: hidden;
   }
-/*   
-  .logoBG {
-    left: 35vw;
-    top: 15vh;
-    position: absolute;
-    margin: 0 auto;
-    height: auto;
-    width: 27vw;
-    z-index: 1;
-  } */
 
   .logo{
-    margin: 5vh auto;
+    filter: brightness(0) invert(1);
+    margin: 10vh auto;
     text-align: center;
-    height: 30vh;
+    height: 20vh;
     width: auto;
-  }
-  
-  .loadingLogo {
-    position: relative;
-    right: -5vw;
-    height: auto;
-    width: 10vw;
-    animation: loadingAnimation linear 5.5s;
-    animation-delay: 0.2s;
-    z-index: 2;
-    top: 35vh;
-  }
-  
+    rotate: y 45deg;
+	animation: loadingAnimation 3s linear forwards;
+  }  
+
+
   @keyframes loadingAnimation {
-    0% {
-      top: 35vh;
-    }
-    50% {
-      top: 15vh;
-    }
-    70% {
-      top: 1vh;
-    }
-    80% {
-      top: 0.3vh;
-    }
-    100% {
-      top: 0.3vh;
-    }
+    0% {rotate: y 45deg;}
+    20% {rotate: y 135deg;}
+    40% {rotate: y 225deg;}
+    60% {rotate: y 315deg;}
+    100% {rotate: y 360deg;}
   }
-  
+
+
   .loadingText {
-    height: 40vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    padding: 2rem 0;
   }
-  #loadTextWrapper {
+
+.loadingDestUnk{
     color: #3e3e3e;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem auto;
   }
   
-  .destUnkText {
+  .landingText{
     font-weight: 700;
     position: relative;
     color: #ffffff;
     font-size: 4rem;
   }
   
-  .destUnkText::before {
+  .landingText::before {
     font-weight: 700;
     position: absolute;
     content: attr(data-text);
@@ -239,7 +228,7 @@ body {
     height: 120%;
     color: #173a2c;
     overflow: hidden;
-    animation: loading 2s linear forwards;
+    animation: loading 2.5s linear forwards;
     animation-delay: .3s;
     font-size: 4rem;
   }
@@ -272,14 +261,7 @@ body {
   .containerRandom{
     margin: 5vh auto;
     width: 30vw;
-    text-align: center;
-    align-self: center;
-    align-items: center;
-    align-content: center;
     justify-content: center;
-    justify-items: center;
-    justify-self: center;
-    text-align: center;
   }
 
   .button{
@@ -346,6 +328,20 @@ body {
   /* On screens that are 992px or less, set the background color to blue */
 @media screen and (max-width: 1040px) {
 
+    /* Loading Logo - Spinning one */
+    .logo{
+        height: auto;
+        width: 30vw;
+      }  
+
+      #loadingImage {
+        height: auto;
+        margin: 2rem auto;
+      }
+
+
+      /* User input form */
+
     .containerForm {
         font-size: 2rem;
         width: fit-content;
@@ -357,10 +353,18 @@ body {
         font-weight: 200;
       }
 
-      .containerform p{
-        font-size: 2rem;
+      .containerForm p{
+        font-size: 1.75rem;
+        font-weight: 400;
       }
 
+      .containerLocation {
+        width: 70vw;
+      }
+      
+      .containerWeather {
+        width: 70vw;
+      }
       .column img {
         max-width: 100%;
         width: 80vw;
@@ -385,6 +389,7 @@ body {
     text-align: center;
   }
   .headerLogo{
+    filter: brightness(0) invert(1);
     width: 15vw;
     height: auto;
     margin: 2.5vh auto;
@@ -396,7 +401,6 @@ body {
 .row {
 display: flex;
 flex-wrap: wrap;
-padding: 0 20px;
 }
 
 .hidden {
