--- a/style.css
+++ b/style.css
@@ -469,6 +469,7 @@ body {
   .smallScreenLogo{
     display:inherit;
     width: auto;
+    max-width: 80vw;
     height: auto;
     margin: 1rem auto;
     position: inherit; 
